--- a/package.json
+++ b/package.json
@@ -1,20 +1,31 @@
 {
   "name": "react-shop-admin",
-  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:fix": "eslint src/ --fix"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "13.5.4"
+    "@headlessui/react": "^1.4.2",
+    "@heroicons/react": "^1.0.5",
+    "autoprefixer": "^10.4.0",
+    "axios": "^1.5.1",
+    "js-cookie": "^3.0.5",
+    "next": "12.0.7",
+    "postcss": "^8.4.4",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "tailwindcss": "^2.2.19"
   },
   "devDependencies": {
-    "eslint": "^8",
-    "eslint-config-next": "13.5.4"
+    "eslint": "8.4.0",
+    "eslint-config-next": "12.0.7",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.5.1"
   }
 }
