--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
   "dependencies": {
     "@headlessui/react": "^1.4.2",
     "@heroicons/react": "^1.0.5",
+    "@tailwindcss/forms": "^0.4.1",
     "autoprefixer": "^10.4.0",
-    "axios": "^1.5.1",
-    "js-cookie": "^3.0.5",
+    "axios": "^0.24.0",
+    "chart.js": "^3.6.2",
+    "js-cookie": "^3.0.1",
     "next": "12.0.7",
     "postcss": "^8.4.4",
     "react": "17.0.2",
+    "react-chartjs-2": "^4.0.0",
     "react-dom": "17.0.2",
-    "tailwindcss": "^2.2.19"
+    "tailwindcss": "^3.0.0"
   },
   "devDependencies": {
     "eslint": "8.4.0",
